# rules-nodejs-xplat-toolchain

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
bazel/local_rule/: BUILD.bazel  local_rule.bzl  script.sh
bazel/remote_rule/: remote_rule.bzl  script.sh
configs/rbe_default/config/: BUILD.bazel
